<resources>
    <string name="app_name">Lista de Cursos Desejados</string>
    <string name="title_activity_main">Informe seus dados e curso desejado</string>
    <string name="first_name_text">Primeiro Nome</string>
    <string name="last_name_text">Sobrenome</string>
    <string name="course_name_text">Curso</string>
    <string name="phone_number_text">Telefone</string>
    <string name="first_name_hint">Digite o primeiro nome</string>
    <string name="last_name_hint">Digite o sobrenome</string>
    <string name="course_name_hint">Digite o nome do curso</string>
    <string name="phone_number_hint">Digite o número de telefone</string>
    <string name="save_button_text">Salvar</string>
    <string name="clear_button_text">Limpar</string>
    <string name="finish_button_text">Finalizar</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_courses">Courses</string>
    <string name="open">Open drawer</string>
    <string name="close">Close drawer</string>
    <string name="title_activity_people_list">List of People</string>
    <string name="title_courses_list">Gerencie os cursos disponíveis</string>
    <string name="addCourseHint">Adicione um novo curso</string>

</resources>